Updated and refactored code to support SFML 3. Updated README file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ include_directories(include)
 
 add_executable(artApp src/main.cpp src/colorButton.cpp src/brush.cpp src/canvas.cpp)
 
-find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+find_package(SFML 3 COMPONENTS Graphics Window System REQUIRED)
 
-target_link_libraries(artApp sfml-graphics sfml-window sfml-system)
+target_link_libraries(artApp SFML::Graphics SFML::Window SFML::System)
